--- a/lab5web/index.html
+++ b/lab5web/index.html
@@ -8,38 +8,32 @@
     <title>Temperature</title>
 </head>
 
+<script type="text/javascript" src="https://unpkg.com/axios@1.4.0/dist/axios.min.js"></script>
 <script type="text/javascript" src="main.js"></script>
 
 <body>
     <div class="container">
         <div class="btn-cont">
-            <button onclick="sec_btn()">Секунды</button>
-            <button onclick="hour_btn()">Часы</button>
-            <button onclick="day_btn()">Дни</button>
+            <button onclick="sec_btn()">Seconds</button>
+            <button onclick="hour_btn()">Hours</button>
+            <button onclick="day_btn()">Days</button>
+            <h3 id="period_str">Period: </h3>
         </div>
         <div class="data">
             <table>
                 <thead>
                     <tr>
-                        <td>Time:</td>
+                        <td>Time</td>
                         <td>Temperature</td>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr>
-                        <td>231 321 3 13123 </td>
-                        <td>-123.213131</td>
-                    </tr>
-                    <tr>
-                        <td>435 35 35 34554 </td>
-                        <td>12.435323442</td>
-                    </tr>
-                    <tr>
-                        <td>45 35345 2 423</td>
-                        <td>-32.3253654</td>
-                    </tr>
-                </tbody>
             </table>
+            <div class="tbody-cont">
+                <table>
+                    <tbody id="table">
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </body>
